# patch-tuesday-parser

./: Cargo.toml
src/: data_structure.rs  main.rs  report_formatter.rs  web_request.rs
src/web_request/: data_structure.rs  mod.rs
