[package]
name = "patch-tuesday-parser"
authors = ["Euan MacKay <emackay@proact.co.uk>",]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["json"] }
rust_xlsxwriter = "0.38.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
